# echo-mirage-cyberdeck

./: .env.demo.example  .gitignore  .npmrc  AGENTS.md  L-ARCH-001.md  THIRD_PARTY_NOTICES.md  WHAT_DID_WE_DO_SO_FAR.md  c123.db-shm  c123.db-wal  eslint.config.mjs  j=14 reciept - muthur-property-manager-demo-user-acceptance-checklist-and-walkthrough.md  next-env.d.ts  next.config.mjs  operator-doc.txt  package.json  playwright.config.ts  pnpm-lock.yaml  requirements-glyph.txt  requirements-pi.txt  tailwind.config.ts  tmp_update_report_cover.py  tsconfig.json  vercel.json
.cursor/: hooks.json
.echo-mirage/: identity.json  permissions.json  remember.md  voice-profile.json
.muthur/: drops.jsonl
.playwright-cli/: page-2026-06-02T10-47-25-856Z.yml
.playwright-mcp/: page-2026-05-27T04-48-19-984Z.yml  page-2026-05-30T03-51-30-447Z.yml  page-2026-05-30T03-51-48-980Z.yml  page-2026-05-30T15-26-22-190Z.yml  page-2026-05-30T15-26-45-901Z.yml
.tmp/: asky-main.bundle.js  dev-server.json
.zed/: settings.json
Documents/: quang le resume.md
apps/echo-satellite/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/echo-satellite/src-tauri/capabilities/: default.json
apps/echo-satellite/src-tauri/icons/: icon.icns
apps/echo-satellite/src-tauri/src/: capture.rs  config.rs  lib.rs  main.rs  mission.rs  pair.rs  pair_server.rs  permissions.rs  spy_links.rs  startup_log.rs  ws_client.rs
docs/: .~lock.Echo_Mirage_MUTHUR_Doctrine.docx#  Echo Mirage Handoff.docx  Echo Mirage Handoff.md  Echo_Mirage_MUTHUR_Doctrine.docx  L.md  MUTHUR_VOICE.md  archive-design.md  call-station.md  cyberdeck-team-doctrine.md  echo mirage - muthur overall plan.md  echo-mirage-handoff.md  echo-mirage-marketing.md  echo-mirage-memory-spec.md  echo-mirage.md  echo_mirage_cognition_doctrine_v0.md  echo_mirage_fusion_memory_workflow.md  echo_mirage_fusion_workflow.md  echo_mirage_handoff 5-12-26.md  echo_mirage_implementation_roadmap.md  echo_mirage_memory_card_about_card_catalog.md  echo_mirage_memory_card_about_memory_cards.md  echo_mirage_memory_card_about_semantic_atlas_identity.md  muthur-ask.md  (+26 more)
(+1663 files in other folders)
